[package]
name = "sp-consensus"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Common utilities for building and using consensus engines in substrate."
documentation = "https://docs.rs/sp-consensus/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1.42"
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
futures = { version = "0.3.1", features = ["thread-pool"] }
log = "0.4.8"
thiserror = "1.0.21"

sp-api = { version = "3.0.0", path = "../../api" }
sp-core = { version = "3.0.0", path = "../../core"}
sp-inherents = { version = "3.0.0", path = "../../inherents" }
sp-state-machine = { version = "0.9.0", path = "../../state-machine" }
sp-std = { version = "3.0.0", path = "../../std" }
sp-version = { version = "3.0.0", path = "../../version" }
sp-runtime = { version = "3.0.0", path = "../../runtime" }

[features]
default = []
